# api/lib/controllers/sushi/index.js
@@ -325,6 +325,7 @@ router.route({
     },
     body: {
       target: Joi.string().trim(),
+      harvestId: Joi.string().trim(),
       beginDate: Joi.string().regex(/^[0-9]{4}-[0-9]{2}$/),
       endDate: Joi.string().regex(/^[0-9]{4}-[0-9]{2}$/),
       forceDownload: Joi.boolean().default(false),
